--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Chrome types */
+    "types": ["chrome"]
   },
   "include": ["src"]
 }
